kubernetes/template.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: RoomManage
  labels:
    app: RoomManage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: RoomManage
  template:
    metadata:
      labels:
        app: RoomManage
    spec:
      containers:
        - name: RoomManage
          image: username/RoomManage:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: UserListManage
  labels:
    app: UserListManage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: UserListManage
  template:
    metadata:
      labels:
        app: UserListManage
    spec:
      containers:
        - name: UserListManage
          image: username/UserListManage:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: RoomReservationApp
  labels:
    app: RoomReservationApp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: RoomReservationApp
  template:
    metadata:
      labels:
        app: RoomReservationApp
    spec:
      containers:
        - name: RoomReservationApp
          image: username/RoomReservationApp:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: 알람
  labels:
    app: 알람
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 알람
  template:
    metadata:
      labels:
        app: 알람
    spec:
      containers:
        - name: 알람
          image: username/알람:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5


---


apiVersion: v1
kind: Service
metadata:
  name: RoomManage
  labels:
    app: RoomManage
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: RoomManage


---


apiVersion: v1
kind: Service
metadata:
  name: UserListManage
  labels:
    app: UserListManage
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: UserListManage


---


apiVersion: v1
kind: Service
metadata:
  name: RoomReservationApp
  labels:
    app: RoomReservationApp
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: RoomReservationApp


---


apiVersion: v1
kind: Service
metadata:
  name: 알람
  labels:
    app: 알람
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: 알람
