kubernetes/deployment.yml
---
  apiVersion: "apps/v1"
  kind: "Deployment"
  metadata: 
    name: "roommanage"
    labels: 
      app: "roommanage"
  spec: 
    selector: 
      matchLabels: 
        app: "roommanage"
    replicas: 1
    template: 
      metadata: 
        labels: 
          app: "roommanage"
      spec: 
        containers: 
          - 
            name: "roommanage"
            image: "jinyoung/roommanage:v1"
            ports: 
              - 
                containerPort: 8080
            readinessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 10
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 10
            livenessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 120
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 5
---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "RoomManage"
    labels: 
      app: "RoomManage"
  spec: 
    ports: 
      - 
        port: 8080
        targetPort: 8080
    selector: 
      app: "roommanage"
---
  apiVersion: "apps/v1"
  kind: "Deployment"
  metadata: 
    name: "UserListManage"
    labels: 
      app: "UserListManage"
  spec: 
    selector: 
      matchLabels: 
        app: "UserListManage"
    replicas: 1
    template: 
      metadata: 
        labels: 
          app: "UserListManage"
      spec: 
        containers: 
          - 
            name: "UserListManage"
            image: "UserListManage"
            ports: 
              - 
                containerPort: 8080
            readinessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 10
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 10
            livenessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 120
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 5
---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "UserListManage"
    labels: 
      app: "UserListManage"
  spec: 
    ports: 
      - 
        port: 8080
        targetPort: 8080
    selector: 
      app: "UserListManage"
---
  apiVersion: "apps/v1"
  kind: "Deployment"
  metadata: 
    name: "RoomReservationApp"
    labels: 
      app: "RoomReservationApp"
  spec: 
    selector: 
      matchLabels: 
        app: "RoomReservationApp"
    replicas: 1
    template: 
      metadata: 
        labels: 
          app: "RoomReservationApp"
      spec: 
        containers: 
          - 
            name: "RoomReservationApp"
            image: "RoomReservationApp"
            ports: 
              - 
                containerPort: 8080
            readinessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 10
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 10
            livenessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 120
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 5
---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "RoomReservationApp"
    labels: 
      app: "RoomReservationApp"
  spec: 
    ports: 
      - 
        port: 8080
        targetPort: 8080
    selector: 
      app: "RoomReservationApp"
---
  apiVersion: "apps/v1"
  kind: "Deployment"
  metadata: 
    name: "알람"
    labels: 
      app: "알람"
  spec: 
    selector: 
      matchLabels: 
        app: "알람"
    replicas: 1
    template: 
      metadata: 
        labels: 
          app: "알람"
      spec: 
        containers: 
          - 
            name: "알람"
            image: "알람"
            ports: 
              - 
                containerPort: 8080
            readinessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 10
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 10
            livenessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 120
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 5
---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "알람"
    labels: 
      app: "알람"
  spec: 
    ports: 
      - 
        port: 8080
        targetPort: 8080
    selector: 
      app: "알람"
---
  apiVersion: "networking.k8s.io/v1"
  kind: "Ingress"
  metadata: 
    name: "gateway"
    annotations: 
      kubernetes.io/ingress.class: "nginx"
  spec: 
    rules: 
      - 
        host: ""
        http: 
          paths: 
            - 
              path: "/roommanages"
              pathType: "Prefix"
              backend: 
                service: 
                  name: "RoomManage"
                  port: 
                    number: 8080
